# wiedzieliscie-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
scripts/: add-character.sh  add-choice-task.sh  add-dialogue.sh  add-location-task.sh  add-text-task.sh  delete-character.sh  delete-dialogue.sh  get-characters.sh  get-dialogues-unused.sh  get-dialogues.sh  get-tasks-unused.sh  get-tasks.sh  login.sh  logout.sh  register.sh  resend_auth.sh  reset_password.sh  retrieve.sh  simple_modify.sh
src/: main.rs  util.rs
src/admin/: character.rs  dialogue.rs  game.rs  mod.rs  quest.rs  task.rs
src/db/: mod.rs
src/error/: mod.rs  report.rs
src/fetch/: get.rs  mod.rs
src/user/: delete_user.rs  jwt.rs  login.rs  logout.rs  mod.rs  register.rs  reset.rs  retrieve.rs  update_email.rs  verifyless_updates.rs
tests/: main.py
