[package]
name = "wiedzieliscie-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
resend-rs = "0.9.1"
rocket = { version = "0.5.1", features = ["json"]}
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
